--- a/ffp-vue/tsconfig.json
+++ b/ffp-vue/tsconfig.json
@@ -12,5 +12,11 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.vue"
-  ]
+  ],
+//  "compilerOptions": {
+//    "baseUrl": ".",
+//    "paths": {
+//      "@/*": ["src/*"]
+//    }
+//  }
 }
